<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forgot_password">Forgot</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">sign-in</string>
    <string name="register">Register</string>
    <string name="massage">Massage</string>
    <string name="social">Social</string>
    <string name="info">Info</string>
    <string name="market">Market</string>
</resources>