<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginBottom="215dp"
        android:text="@string/massage" />

    <Button
        android:id="@+id/button4"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="412dp"
        android:layout_marginTop="20dp"
        android:text="@string/social" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/market" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:layout_height="107dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/social" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="81dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="289dp"
        app:srcCompat="@drawable/massage" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="163dp"
        android:layout_marginTop="561dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="200dp"
        app:srcCompat="@drawable/info" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="158dp"
        android:layout_marginBottom="27dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="21dp"
        android:text="@string/market" />

</RelativeLayout>